[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "gasp"
version = "0.0.1"
authors = [
  { name="Michael Mendoza", email="askmichaelmendoza@gmail.com" },
]
description = "Generation of Arbitary Spectral Profiles using bSSFp MRI"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gasp","mri", "ssfp"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy", 
  "matplotlib", 
  "scikit-image", 
  "seaborn", 
  "pymapvbvd", 
  "jupyterlab", 
  "gdown", 
  "scipy"
]

[project.urls]
"Homepage" = "https://github.com/michaelmendoza/gasp"
"Bug Tracker" = "https://github.com/michaelmendoza/gasp/issues"