[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "gasp-ssfp"
version = "0.0.1"
authors = [
  { name="Michael Mendoza", email="askmichaelmendoza@gmail.com" },
]
description = "Generation of Arbitary Spectral Profiles using bSSFp MRI"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gasp", "ssfp", "mri"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy", 
  "matplotlib", 
  "scikit-image", 
  "seaborn", 
  "pymapvbvd", 
  "jupyterlab", 
  "gdown", 
  "scipy"
]

[project.urls]
"Homepage" = "https://github.com/michaelmendoza/gasp"
"Bug Tracker" = "https://github.com/michaelmendoza/gasp/issues"

[tool.hatch.version]
path = "gasp/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gasp",
]

[tool.hatch.build.targets.wheel]
packages = ["gasp"]